# test_ccache

./: .gitignore  CMakeLists.txt  ConcreteHandler1.cpp  ConcreteHandler1.hpp  ConcreteHandler2.cpp  ConcreteHandler2.hpp  ConcreteHandler3.cpp  ConcreteHandler3.hpp  Handler.hpp  build_clang.sh  build_gcc.sh  cpp_env_setup_vsc.code-workspace  main.cpp  time_measurements.txt
.cache/clangd/index/: ConcreteHandler1.cpp.1355C18A57EB7162.idx  ConcreteHandler1.hpp.F0EBBD24B7CDD42C.idx  ConcreteHandler2.cpp.6989CC813BE41997.idx  ConcreteHandler2.hpp.A32818B31C03F9D2.idx  ConcreteHandler3.cpp.CEBBEEA1EC72AA7B.idx  ConcreteHandler3.hpp.8FFA2DB5CEEACFAC.idx  Handler.hpp.50200EE336557D0B.idx  main.cpp.1DDB50304F7EABAA.idx
